
/**
*	Description	: Gradle build file 
*	Author		: Sanjeev
*/

buildscript{
	repositories{
        jcenter()
        mavenCentral()
    }
    
}

apply plugin : 'application'
apply plugin : 'eclipse'

mainClassName = 'sanrockzz.gradledemo.main.GradleDemoMain'
version = '1.0'

repositories {
		mavenCentral()    
	}

sourceCompatibility=1.8
targetCompatibility=1.8

jar {
    manifest {
        attributes 'Implementation-Title': 'Gradle Demo',
                   'Implementation-Version': version
    }
}

dependencies {

	compile "org.springframework.boot:spring-boot-starter-web:1.5.8.RELEASE"
   	compile "org.json:json:20171018"
	   	
   	compile "com.fasterxml.jackson.core:jackson-databind:2.9.3"
	compile "com.fasterxml.jackson.core:jackson-annotations:2.9.3"
	compile "com.fasterxml.jackson.core:jackson-core:2.9.3"
	
   	compile "io.springfox:springfox-swagger2:2.9.2"
	compile "io.springfox:springfox-swagger-ui:2.9.2"
	compile "org.webjars:jquery:2.2.4"
	
	compile "org.springframework.ws:spring-ws-core:2.4.2.RELEASE"
	compile "org.springframework:spring-oxm:3.0.4.RELEASE"
		   	
   	testCompile "junit:junit:4.12"
   	testCompile "org.jmockit:jmockit:1.9"
   	testCompile"org.springframework.boot:spring-boot-starter-test:1.5.8.RELEASE"
	
	}


task copyToLib(type: Copy) {
    	from configurations.runtime
    	into "$buildDir/lib"    
	}
task copyJar(type: Copy) {
    	from "$buildDir/libs"
    	into "$buildDir/lib"    
	}

task copyDockerFile(type: Copy) {
    	from "./Dockerfile"
    	into "$buildDir"
   }

task copyDevOps(type: Copy) {
    	from "./devops"
    	into "$buildDir/devops"
   }
   
build.dependsOn(copyToLib, copyDockerFile, copyJar, copyDevOps)

